# rust-cleaner

./: .gitignore  AppIcon.icns  CHANGELOG.md  Cargo.toml  Info.plist  Makefile  README.md  com.wd40.rust-cleaner.plist
scripts/: gen_icon.py
src/: cleaner.rs  config.rs  disk.rs  icon.rs  lib.rs  main.rs  menu.rs  scanner.rs
